fixed overlap on cursor

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -10,6 +10,7 @@
 
 .intro {
   position: absolute;
+  margin-left: 15px;
   left: 50%;
   bottom: 50px;
   border: 2px solid white;
